# vector_databases_tutorial

./: .pre-commit-config.yaml  .sqlfluff  README.md  cosine_similarity.py  pyproject.toml
chroma_db/: car_reviews_example.py  car_reviews_open_ai.py  numpy_vector.py  set_up_chromadb.py  word_embeddings.py
chromadb/: README.md  text_embeddings.py  word_embeddings.py
utils/: car_etl.py  chroma_utils.py
