[tool.poetry]
name = "vector-databases-tutorial"
version = "0.1.0"
description = ""
authors = ["minhbui <minh.bui@wirecutter.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "0.4.22"
polars = "0.20.3"
spacy ="3.7.2"
sentence-transformers = "2.2.2"
more-itertools = "10.2.0"
openai = "1.7.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
